--- a/diwali_sales/diwali_sales.ipynb
+++ b/diwali_sales/diwali_sales.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,6 +163,15 @@
    ],
    "source": [
     "pd.isnull(df).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f =df['Age'].value_counts()"
    ]
   },
   {
